service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gebla-svc
spec:
  selector:
    app: gebla-website
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
